9 Mar 2006: Wouter
	- Removed header from DIFF file format. CRC not that imporant there,
	  you have to check the packets anyway.
	- cutest rbtree removed unused clean_rbtree and always_fail routines.

8 Mar 2006: Wouter
	- xfrd sends UDP xfr request to master(s) with timeouts, and stores
	  returned data on disk.
	- updated dependencies and declaration of write_soa_buffer.

7 Mar 2006: Wouter
	- Fixed printfs for size_t warnings on Mac OsX.

6 Mar 2006: nsd-team
   * Wouter: xfrd read and write work. Statefile is "nsd.xfst".
   * Wouter: nsd-checkconf checks dname parse of zone name:.
   * Wouter: updated difffile in parser.y, production in server: clause.
   * Wouter: zonec now takes -C for 'no config file' option.
   * Wouter: updated configyyrename.h for bison 1.875d on sparc.
   * Miek: zonec -h and nsd -h exit with exit code = 0.
   * Miek & Wouter: updated tpkgs to work again.
   * Wouter: xfrd read handle soas, handle soa_incoming part.
   * Wouter: moved compare_serial() from nsd-xfer to util.h.

4 Mar 2006: Wouter
	- xfrd zone and soa memory structure definitions.
	- xfrd init zones.
	- xfrd read and write state file code.
	- option for difffile: and xfrdfile: config lines.

3 Mar 2006: Wouter
	- Removed double kill after reload. Only socket cmd send.
	- Added code to handle race condition where xfrd is restarted
	  during a succesfull reload. Afterwards, the new server_main
	  only has the old xfrd pid, new xfrd is an orphan.
	  Solution: when xfrd closes cmd channel (i.e. it quit)
	  unexpectedly, send sighup to all processes in the group.
	  This should quit the orphan & all children & reload the
	  server_main, which will fork the children and xfrd again.

2 Mar 2006: Wouter
	- Added nsd-checkconf.8 to makedist.sh replace list.
	- DIFF file format updated.
	- removed tsigkey->server value, it was read in, but unused.
	- new function to add config file keys to tsig.
	- nsd-checkconf checks parsing of keys. 
	- Updated sample key file with valid keys.